--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-offest-6 mx-auto w-50 bg-light m-5 pl-4 pr-4 pt-4 border border-dark rounded" >
-      <h2 class="mx-auto w-50 text-center">
+    <div class="col-md-offest-6 mx-auto w-75 bg-light m-5 pl-4 pr-4 pt-4 border border-dark rounded" >
+      <h2 class="text-center">
         Comment App
       </h2>
 
