fixed title and favicon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- character set -->
   <meta charset="utf-8">
   <!-- title -->
-  <title>TEMPLATE</title>
+  <title>Comment App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- GOOGLE FONTS -->
@@ -55,7 +55,9 @@
 </div>
 
 
-
+<!-- <footer class="bg-light">
+  <a href="http://www.CarbettaCoding.com"><img src="img/CarbettaCoding-Logo-Transparent.png" alt="CarbettaCoding" class="img-fluid d-block mx-auto w-50 h-25"></a>
+</footer> -->
 
 
 
