--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         Comment App
       </h2>
 
+      <form id="myForm">
       <div class="form-group">
         <input id="username" class="form-control border border-danger" placeholder="username">
       </div>
@@ -41,6 +42,7 @@
       <div class="form-group">
         <textarea id="comment" class="form-control border border-danger" placeholder="comment"></textarea>
       </div>
+      </form>
 
       <div class="form-group">
         <button type="button" onclick="printComment()" class="btn btn-lg btn-danger text-center border border-dark">Print Comment</button>
