--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-offest-6 mx-auto w-75 bg-light m-5 pl-4 pr-4 pt-4 border border-dark rounded" >
+    <div class="col-md-offest-6 mx-auto w-75 bg-light mt-5 mr-5 ml-5 pl-4 pr-4 pt-4 border border-dark rounded" >
       <h2 class="text-center">
         Comment App
       </h2>
@@ -64,7 +64,7 @@
 
 
   <!-- Main external JS -->
-  <script src="js/scripts.js"></script>
+  <script src="js/scripts4.js"></script>
   <!-- BOOTSTRAP jQuery CDN -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <!-- BOOTSTRAP Popper  CDN-->
