--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-offest-6 mx-auto w-75 bg-light mt-5 mr-5 ml-5 pl-4 pr-4 pt-4 border border-dark rounded" >
+    <div class="col-md-offest-6 mx-auto w-75 bg-light mt-5 mr-5 ml-5 pl-4 pr-4 pt-4 border border-dark rounded animated fadeInDownBig" >
       <h2 class="text-center">
         Comment App
       </h2>
